fix: (styles.css) header z-index

--- a/pages/styles.css
+++ b/pages/styles.css
@@ -35,6 +35,7 @@ header {
   left: 0;
   width: 100%;
   top: 0;
+  z-index: 1;
 }
 
 li,
